--- a/Temas por día/Semana 2/24-11-2020 y 25-11-2020/Objetos/Franchi-Solucion-19-Herencia-Encapsulamiento-Composicion.ipynb
+++ b/Temas por día/Semana 2/24-11-2020 y 25-11-2020/Objetos/Franchi-Solucion-19-Herencia-Encapsulamiento-Composicion.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Ejercicios de Herencia, Encapsulamiento y Composición"
+    "# Soluciones de Ejercicios de Herencia, Encapsulamiento y Composición"
    ]
   },
   {
@@ -17,30 +17,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Solución\n",
     "class Vehiculo:\n",
-    "\n",
-    "    def __init__(self, marca, color, modelo, patente):\n",
-    "        \n",
-    "        self.ruedas = 4\n",
+    "    \n",
+    "    def __init__(self, marca, color, placa, modelo):\n",
+    "        # Propiedades\n",
+    "        self.numero_ruedas = 4\n",
     "        self.marca = marca\n",
     "        self.color = color\n",
+    "        self.placa = placa\n",
     "        self.modelo = modelo\n",
-    "        self.patente = patente\n",
-    "\n",
-    "    def acelerar(self):\n",
-    "        print(\"Soy\", self.marca, \"y estoy acelerando\")\n",
     "        \n",
+    "    def acelerar(self):\n",
+    "        print(f\"Soy {self.marca}, estoy acelerando!!\")\n",
+    "    \n",
     "    def frenar(self):\n",
-    "        print(\"Soy\", self.marca, \"y estoy frenando\")\n",
-    "\n",
+    "        print(f\"Soy {self.marca}, estoy frenando!!\")\n",
+    "    \n",
     "    def voltear(self, direccion):\n",
-    "        print(\"Soy\", self.marca, \"y estoy volteando a la\", direccion)\n",
-    "     "
+    "        print(f\"Soy {self.marca}, estoy volteando a la {direccion}\")\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        \"\"\"Este método nos servirá para ver una representación en cadena del objeto\"\"\"\n",
+    "        return self.marca"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -51,17 +62,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "<__main__.Vehiculo object at 0x0000027958A37AC0>\n<__main__.Vehiculo object at 0x0000027958A37E50>\n<__main__.Vehiculo object at 0x0000027958A37280>\nSoy Mazda 6 y estoy volteando a la izquierda\nSoy Audi Q3 y estoy volteando a la derecha\nSoy Renault Logan y estoy acelerando\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Objetos vehiculo \n",
     "obj_mazda = Vehiculo('Mazda 6', 'Rojo', 'RED126', '2020')\n",
@@ -93,50 +96,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "<__main__.Auto object at 0x0000027958CC5EE0>\nSoy Renault Logan y estoy tocando bocina\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "# Solución\n",
     "class Vehiculo:\n",
-    "\n",
-    "    def __init__(self, marca, color, patente, modelo):\n",
     "    \n",
+    "    def __init__(self, marca, color, placa, modelo):\n",
     "        self.marca = marca\n",
     "        self.color = color\n",
+    "        self.placa = placa\n",
     "        self.modelo = modelo\n",
-    "        self.patente = patente\n",
-    "\n",
+    "    \n",
     "    def acelerar(self):\n",
-    "        print(\"Soy\", self.marca, \"y estoy acelerando\")\n",
-    "        \n",
+    "        print(f\"Soy {self.marca}, estoy acelerando!!\")\n",
+    "    \n",
     "    def frenar(self):\n",
-    "        print(\"Soy\", self.marca, \"y estoy frenando\")\n",
-    "\n",
+    "        print(f\"Soy {self.marca}, estoy frenando!!\")\n",
+    "    \n",
     "    def voltear(self, direccion):\n",
-    "        print(\"Soy\", self.marca, \"y estoy volteando a la\", direccion)\n",
+    "        print(f\"Soy {self.marca}, estoy volteando a la {direccion}\")\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        \"\"\"Este método nos servirá para ver una representación en cadena del objeto\"\"\"\n",
+    "        return self.marca\n",
+    "    \n",
+    "class Auto (Vehiculo):\n",
+    "    numero_llantas = 4\n",
     "\n",
-    "class Auto(Vehiculo):\n",
-    "\n",
-    "    ruedas = 4\n",
-    "\n",
-    "    def tocarBocina(self):\n",
-    "        print(\"Soy\", self.marca, \"y estoy tocando bocina\")\n",
-    "        \n",
-    "        \n",
-    "obj = Auto('Renault Logan', 'Negro', 'FRE009', '2021')\n",
-    "print(obj)\n",
-    "obj.tocarBocina()\n",
-    "\n",
-    "    "
+    "    def tocar_bocina(self):\n",
+    "        print(f\"Soy {self.marca}, y estoy tocando la bocina!!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -148,27 +146,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "class Motocicleta(Vehiculo):\n",
-    "\n",
-    "    ruedas = 2\n",
+    "# Solución\n",
+    "class Vehiculo:\n",
     "    \n",
+    "    def __init__(self, marca, color, placa, modelo):\n",
+    "        self.marca = marca\n",
+    "        self.color = color\n",
+    "        self.placa = placa\n",
+    "        self.modelo = modelo\n",
+    "    \n",
+    "    def acelerar(self):\n",
+    "        print(f\"Soy {self.marca}, estoy acelerando!!\")\n",
+    "    \n",
+    "    def frenar(self):\n",
+    "        print(f\"Soy {self.marca}, estoy frenando!!\")\n",
+    "    \n",
+    "    def voltear(self, direccion):\n",
+    "        print(f\"Soy {self.marca}, estoy volteando a la {direccion}\")\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        \"\"\"Este método nos servirá para ver una representación en cadena del objeto\"\"\"\n",
+    "        return self.marca\n",
+    "\n",
+    "class Auto (Vehiculo):\n",
+    "    numero_ruedas = 4\n",
+    "\n",
+    "    def tocar_claxon(self):\n",
+    "        print(f\"Soy {self.marca}, y estoy tocando el claxon!!\")\n",
+    "\n",
+    "class Motocicleta (Vehiculo):\n",
+    "    \n",
+    "    numero_ruedas = 2\n",
+    "\n",
     "    def encender_con_patada(self):\n",
-    "        print(\"Soy\", self.marca, \"y estoy encenciendome con patada\")\n",
+    "        print(f\"Soy {self.marca} y estoy encendiendo con patada!!\")\n",
     "\n",
-    "class Avion(Vehiculo):\n",
+    "class Avion (Vehiculo):\n",
     "\n",
-    "    ruedas = 32\n",
+    "    numero_ruedas = 32\n",
+    "    \n",
+    "    def sacar_ruedas(self):\n",
+    "        print(f\"Soy {self.marca} y estoy sacando las llantas!!\")\n",
     "\n",
-    "    def sacar_llantas(self):\n",
-    "        print(\"Soy\", self.marca, \"y estoy sacando las ruedas\")\n",
-    "\n",
+    "    \n",
     "    def aterrizar(self):\n",
-    "        print(\"Soy\", self.marca, \"y estoy aterrizando\")"
+    "        print(f\"Soy {self.marca} y estoy aterrizando!!\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -179,17 +213,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "stream",
-     "name": "stdout",
-     "text": [
-      "Soy Mazda 6 y estoy volteando a la izquierda\nSoy Audi Q3 y estoy volteando a la derecha\nSoy Renault Logan y estoy acelerando\nSoy Honda CB 500 y estoy encenciendome con patada\nSoy Honda CB 500 y estoy volteando a la izquierda\nSoy Yamaha R10 y estoy volteando a la derecha\nSoy Suzuky VStrom 650 y estoy frenando\nSoy Jet Privado y estoy acelerando\nSoy Jet Privado y estoy volteando a la derecha\nSoy Jet Privado y estoy sacando las ruedas\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Creamos Objetos Auto\n",
     "obj_mazda = Auto('Mazda 6', 'Rojo', 'RED126', '2020')\n",
@@ -239,7 +265,7 @@
     "obj_jet.sacar_llantas()\n",
     "\n",
     "# Y aterriza.\n",
-    "# obj_jet.aterrizar()"
+    "obj_jet.aterrizar()"
    ]
   },
   {
@@ -262,6 +288,39 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Solución\n",
+    "class PalancaCambio:\n",
+    "    \n",
+    "    # Suponemos que el carro arranca en Neutro (cambio 0 para nosotros)\n",
+    "    cambio_actual = 0 \n",
+    "\n",
+    "    def __init__(self, numero_cambios = 4, color='Negro', peso='50gr'):\n",
+    "        self.numero_cambios = numero_cambios\n",
+    "        self.color = color\n",
+    "        self.peso = peso\n",
+    "\n",
+    "    def subir_cambio(self):\n",
+    "        self.cambio_actual = self.cambio_actual + 1\n",
+    "        if (self.cambio_actual == self.numero_cambios):\n",
+    "            print(\"No puedo subir mas cambios\")\n",
+    "        print(f\"Palanca de cambio sube el cambio a {self.cambio_actual}\")\n",
+    "    \n",
+    "    def bajar_cambio(self):\n",
+    "        self.cambio_actual = self.cambio_actual - 1\n",
+    "        if (self.cambio_actual == 0):\n",
+    "            print(\"No puedo bajar mas cambios\")\n",
+    "        print(f\"Palanca de cambio baja el cambio a {self.cambio_actual}\")\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Palanca de Cambio de {self.numero_cambios} velocidades\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -273,6 +332,39 @@
     "Ahora, por motivos del ejemplo supongamos que todos los vehículos deben contar con una palanca de cambios (un bote por ejemplo, es un ejemplo de un vehículo sin palanca de cambios). Teniendo esto en cuenta, decimos que todo vehículo tiene una palanca de cambios.\n",
     "La composición trata de una relación semántica entre una clase que “Tiene” y una clase que “Hace Parte”. En nuestro caso la clase Vehiculo “Tiene” un objeto PalancaCambio y a su vez, el objeto PalancaCambio “Hace Parte” de Vehiculo y semánticamente tiene sentido.\n",
     "Incorporar la palanca de cambios en Vehículo"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Solución\n",
+    "\n",
+    "class Vehiculo:\n",
+    "    \n",
+    "    def __init__(self, marca, color, placa, modelo):\n",
+    "        self.marca = marca\n",
+    "        self.color = color\n",
+    "        self.placa = placa\n",
+    "        self.modelo = modelo\n",
+    "        # Todo Vehículo tiene una Palanca de Cambios\n",
+    "        # y a su vez, toda Palanca de Cambios hace parte de un Vehículo\n",
+    "        self.palanca_cambio = PalancaCambio() \n",
+    "    \n",
+    "    def acelerar(self):\n",
+    "        print(f\"Soy {self.marca}, estoy acelerando!!\")\n",
+    "    \n",
+    "    def frenar(self):\n",
+    "        print(f\"Soy {self.marca}, estoy frenando!!\")\n",
+    "    \n",
+    "    def voltear(self, direccion):\n",
+    "        print(f\"Soy {self.marca}, estoy volteando a la {direccion}\")\n",
+    "    \n",
+    "    def __str__(self):\n",
+    "        \"\"\"Este método nos servirá para ver una representación en cadena del objeto\"\"\"\n",
+    "        return self.marca"
    ]
   },
   {
@@ -364,6 +456,31 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "# Solución\n",
+    "class Vehiculo:\n",
+    "    \n",
+    "    def __init__(self, marca, color, placa, modelo):\n",
+    "        self._marca = marca\n",
+    "        self._color = color\n",
+    "        self._placa = placa\n",
+    "        self._modelo = modelo\n",
+    "    \n",
+    "    def _acelerar(self):\n",
+    "        print(f\"Soy {self.marca}, estoy acelerando!!\")\n",
+    "    \n",
+    "    def _frenar(self):\n",
+    "        print(f\"Soy {self.marca}, estoy frenando!!\")\n",
+    "    \n",
+    "    def _voltear(self, direccion):\n",
+    "        print(f\"Soy {self.marca}, estoy volteando a la {direccion}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -382,6 +499,60 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "## Solución\n",
+    "class PalancaCambio:\n",
+    "    \n",
+    "    # Suponemos que el auto arranca en Neutro (cambio 0 para nosotros)\n",
+    "    __cambio_actual = 0 \n",
+    "\n",
+    "    def __init__(self, numero_cambios = 4, color='Negro', peso='50gr'):\n",
+    "        # Los atributos son ahora privados\n",
+    "        self.__numero_cambios = numero_cambios\n",
+    "        self.__color = color\n",
+    "        self.__peso = peso\n",
+    "    \n",
+    "    # Getters y Setters\n",
+    "    def get_numero_cambios(self):\n",
+    "        return self.__numero_cambios\n",
+    "    \n",
+    "    def set_numero_cambios(self, numero_cambios):\n",
+    "        self.__numero_cambios = numero_cambios\n",
+    "\n",
+    "    def get_color(self):\n",
+    "        return self.__color\n",
+    "    \n",
+    "    def set_color(self, color):\n",
+    "        self.__color = color\n",
+    "\n",
+    "    def get_peso(self):\n",
+    "        return self.__peso\n",
+    "    \n",
+    "    def set_peso(self, peso):\n",
+    "        self.__peso = peso\n",
+    "    # Fin Getters y Setters\n",
+    "    \n",
+    "    def subir_cambio(self):\n",
+    "        self.__cambio_actual = self.__cambio_actual + 1\n",
+    "        if (self.__cambio_actual == self.__numero_cambios):\n",
+    "            print(\"No puedo subir mas cambios\")\n",
+    "        print(f\"Palanca de cambio sube el cambio a {self.__cambio_actual}\")\n",
+    "    \n",
+    "    def bajar_cambio(self):\n",
+    "        self.__cambio_actual = self.__cambio_actual - 1\n",
+    "        if (self.__cambio_actual == 0):\n",
+    "            print(\"No puedo bajar mas cambios\")\n",
+    "        print(f\"Palanca de cambio baja el cambio a {self.__cambio_actual}\")\n",
+    "\n",
+    "    def __str__(self):\n",
+    "        return f\"Palanca de Cambio de {self.__numero_cambios} velocidades\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
@@ -389,6 +560,60 @@
    "metadata": {},
    "source": [
     "Modifique también las clases de la Herencia con getters y setters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Solución\n",
+    "class Auto (Vehiculo):\n",
+    "\n",
+    "    # Atributo privado\n",
+    "    __numero_llantas = 4\n",
+    "\n",
+    "    def set_numero_llantas(self, numero_llantas):\n",
+    "        self.__numero_llantas = numero_llantas\n",
+    "\n",
+    "    def get_numero_llantas(self):\n",
+    "        return self.__numero_llantas\n",
+    "        \n",
+    "    def tocar_claxon(self):\n",
+    "        print(f\"Soy {self._marca}, y estoy tocando el claxon!!\")\n",
+    "\n",
+    "class Motocicleta (Vehiculo):\n",
+    "\n",
+    "    # Atributo privado\n",
+    "    __numero_llantas = 2\n",
+    "\n",
+    "    def set_numero_llantas(self, numero_llantas):\n",
+    "        self.__numero_llantas = numero_llantas\n",
+    "\n",
+    "    def get_numero_llantas(self):\n",
+    "        return self.__numero_llantas\n",
+    "\n",
+    "    def encender_con_patada(self):\n",
+    "        print(f\"Soy {self._marca} y estoy encendiendo con patada!!\")\n",
+    "\n",
+    "class Avion (Vehiculo):\n",
+    "\n",
+    "    # Atributo privado\n",
+    "    __numero_llantas = 32\n",
+    "    \n",
+    "    def set_numero_llantas(self, numero_llantas):\n",
+    "        self.__numero_llantas = numero_llantas\n",
+    "\n",
+    "    def get_numero_llantas(self):\n",
+    "        return self.__numero_llantas\n",
+    "\n",
+    "    def sacar_llantas(self):\n",
+    "        print(f\"Soy {self._marca} y estoy sacando las llantas!!\")\n",
+    "\n",
+    "    \n",
+    "    def aterrizar(self):\n",
+    "        print(f\"Soy {self._marca} y estoy aterrizando!!\")"
    ]
   },
   {
@@ -461,7 +686,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.3-final"
+   "version": "3.6.9"
   }
  },
  "nbformat": 4,
